@@ -1,5 +1,12 @@
 2007-05-11  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl (debian_arch_eq): Rename to ...
+	(debarch_eq): ... this. Add prototype. Fix all callers.
+	(debian_arch_is): Rename to ...
+	(debarch_is): ... this. Add prototype. Fix all callers.
+
+2007-05-11  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl ($manual): Rename to ...
 	($mode): ... this. Fix all users.
 	(read_link_group): Change gl() name from 'manflag' to 'update_mode',
